clusters/hybrid01/config/openspeedtest/openspeedtest-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: openspeedtest
  labels:
    pod-security.kubernetes.io/enforce: privileged
    goldilocks.fairwinds.com/enabled: "true"
