clusters/hybrid01/config/openspeedtest/openspeedtest-virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: openspeedtest-external
  namespace: openspeedtest
spec:
  hosts:
  - "speedtest.jkulzer.dev"
  gateways:
  - istio-external-gateway/external-gateway
  http:
  - route:
    - destination:
        host: openspeedtest
        port:
          number: 3000
