clusters/hybrid01/config/openspeedtest/openspeedtest-authpolicy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: openspeedtest-auth-policy
  namespace: istio-system
spec:
  selector:
    matchLabels:
      istio: gateway 
  action: CUSTOM
  provider:
    name: "authelia"
  rules:
  - to:
    - operation:
        hosts:
          - "speedtest.jkulzer.dev"
